* 2014-02-06 - dennis.sieben@open-xchange.com

 - Fix for bug 31003: Empty JSON arrays handed over to this extension now result in an exception

* 2014-02-05 - dennis.sieben@open-xchange.com

 - Fix for bug 30984: registeredServiceImplementations counter must be increased even if the service implementation doesn't require other services

* 2014-02-05 - thorben.betten@open-xchange.com

 - Fix for bug 30977: Only keep MDC map for threads created by Open-Xchange application

* 2014-02-04 - marcus.klein@open-xchange.com

 - Fix for bug 30255: Closing database connections if database pool does not control them anymore.

* 2014-02-04 - dennis.sieben@open-xchange.com

 - SCR1860: added a new mail filter action command for pgp_encrypt extension

* 2014-01-30 - thorben.betten@open-xchange.com

 - Fix for bug 30895: Do not stick to have "image/*" Content-Type, but accept default Content-Type "application/octet-stream", too

* 2014-01-30 - tobias.friedrich@open-xchange.com

 - Fix for bug 30852: Check permissions of all subfolders recursively prior accepting client deletion 

* 2014-01-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 30384: Don't distribute non-common events, don't distribute events received via external mail notification   
 - Fix for bug 28479: Invalidate folder cache on subscription status changes   

* 2014-01-29 - thorben.betten@open-xchange.com

 - Fix for bug 30626: Signal special "Collected addresses" folder as a default folder
 - Fix for bug 29350: Hide "Global address book" folder if associated "gab" capability is not granted

* 2014-01-29 - marcus.klein@open-xchange.com

 - Fix for bug 30862: Added packaging for Finnish language.

* 2014-01-28 - jan.bauerdick@open-xchange.com

 - Fix for bug 30609: Rename XING.yml to xing.yml to restore previous deleted file

* 2014-01-27 - thorben.betten@open-xchange.com

 - Fix for bug 30418: Added EN_GB section for standard mail folder names in AdminUser.properties
