@@ -18,6 +18,7 @@ Import-Package: com.googlecode.concurrentlinkedhashmap,
  com.openexchange.groupware.ldap,
  com.openexchange.i18n,
  com.openexchange.java,
+ com.openexchange.java.util,
  com.openexchange.log,
  com.openexchange.login,
  com.openexchange.mail,
