@@ -1,3 +1,7 @@
+* 2014-02-20 - thorben.betten@open-xchange.com
+
+ - Fix for bug 30138: Ensure each probe for root subfolder capability is exclusively performed
+
 * 2014-02-06 - dennis.sieben@open-xchange.com
 
  - Fix for bug 31003: Empty JSON arrays handed over to this extension now result in an exception
